--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # changes the base-tag in index.html from '/' to 'BlazorProfile' to match GitHub Pages repository subdirectory
       - name: Change base-tag in index.html from / to BlazorProfile
-        run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorProfile\/" \/>/g' release/wwwroot/index.html
+        run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorProfile\/" \/>/g' wwwroot/index.html
