--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,37 @@
-name: Deploy to GitHub pages
-
-# Run workflow on every push to the master branch
-on:
-push:
-branches: [ master ]
+name: 'Publish application'
+on: push
 
 jobs:
-deploy-to-github-pages:
-# Use Ubuntu-latest image to run steps on
-runs-on: ubuntu-latest
-steps:
-# Uses GitHub’s checkout action to check out code from the master branch
-– uses: actions/checkout@v2
+  build:
+    runs-on: ubuntu-latest
+    steps:
+        # Checkout the code
+        - uses: actions/checkout@v2
 
-# Sets up .NET Core SDK 3.1
-– name: Setup .NET Core SDK
-uses: actions/setup-dotnet@v1
-with:
-dotnet-version: 3.1
+        # Install .NET Core SDK
+        - name: Setup .NET Core
+          uses: actions/setup-dotnet@v1
+          with:
+            dotnet-version: 3.1.x
 
-# Publishes the Blazor project to the release folder
-– name: Publish .NET Core Project
-run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release –nologo
+        # Run tests
+        - name: Test
+          run: dotnet test
 
-# Changes the base tag in index.html from ‘/’ to ‘BlazorGitHubPagesDemo’ to match the GitHub Pages repository subdirectory
-– name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
-run: sed -i ‘s/<base href=”\/” \/>/<base href=”\/BlazorGitHubPagesDemo\/” \/>/g’ release/wwwroot/index.html
+        # Generate the website
+        - name: Publish
+          run: dotnet publish myapp.csproj --configuration Release
 
-# Copy index.html to 404.html to serve the same file when a file is not found
-– name: copy index.html to 404.html
-run: cp release/wwwroot/index.html release/wwwroot/404.html
-
-# Add the .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
-– name: Add .nojekyll file
-run: touch release/wwwroot/.nojekyll
-
-– name: Commit wwwroot to GitHub pages
-uses: JamesIves/github-pages-deploy-action@3.7.1
-with:
-GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-BRANCH: gh-pages
-FOLDER: release/wwwroot
+        # Publish the website
+        - name: GitHub Pages action
+          if: ${{ github.ref == 'refs/heads/master' }} # Publish only when the push is on master
+          uses: peaceiris/actions-gh-pages@v3.6.1
+          with:
+            github_token: ${{ secrets.PUBLISH_TOKEN }}
+            publish_branch: gh-pages
+            publish_dir: bin/Release/netstandard2.1/publish/wwwroot
+            allow_empty_commit: false
+            keep_files: false
+            force_orphan: true
+            # TODO uncomment the following line if you have a custom domain name
+            cname: http://hopkinsandy.com
