--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,24 @@
-name: 'Publish application'
-on: push
-
+name: Build and Deploy to Github Pages
+on:
+    push:
+        branches: 
+        - master
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-        # Checkout the code
+    build-and-deploy:
+        runs-on: ubuntu-latest
+        steps:
         - uses: actions/checkout@v2
-
-        # Install .NET Core SDK
-        - name: Setup .NET Core
+        - name: Setup .NET Core 
           uses: actions/setup-dotnet@v1
           with:
-            dotnet-version: 3.1.x
-
-        # Run tests
-        - name: Test
-          run: dotnet test
-
-        # Generate the website
-        - name: Publish
-          run: dotnet publish myapp.csproj --configuration Release
-
-        # Publish the website
-        - name: GitHub Pages action
-          if: ${{ github.ref == 'refs/heads/master' }} # Publish only when the push is on master
-          uses: peaceiris/actions-gh-pages@v3.6.1
+            dotnet-version: 3.1.300
+        - name: Publish with dotnet
+          run: dotnet publish ./src/BlazorGithubPagesUsingGithubActions.sln --configuration Release --output build
+        - name: Deploy to Github Pages
+          uses: JamesIves/github-pages-deploy-action@releases/v3
           with:
-            github_token: ${{ secrets.PUBLISH_TOKEN }}
-            publish_branch: gh-pages
-            publish_dir: bin/Release/netstandard2.1/publish/wwwroot
-            allow_empty_commit: false
-            keep_files: false
-            force_orphan: true
-            # TODO uncomment the following line if you have a custom domain name
-            cname: http://hopkinsandy.com
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            BASE_BRANCH: master
+            BRANCH: gh-pages
+            FOLDER: build/wwwroot
+            CLEAN: true
