--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy Blazor WASM to GitHub page
-env:
-  PUBLISH_DIR: bin/Release/net5.0/publish/wwwroot
+name: Deploy to GitHub Pages
 
 # Controls when the workflow will run
 on:
@@ -17,32 +15,38 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy-to-github-pages:
+    # use ubuntu-latest image to run steps on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - name: Publish Application
-        run: dotnet publish -c Release
-      - name: Rewrite base href
-        if: success()
-        uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
-        with:
-          html_path: ${{ env.PUBLISH_DIR }}/index.html
-          base_href: REPOSITORY_NAME
-          # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. 
-   # Allow files and folders starting with an underscore.
-      - name: Add .nojekyll file
-        run: touch ${{ env.PUBLISH_DIR }}/.nojekyll
-      - name: Commit to GitHub pages Repo
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v1.5.1
-        with:
-          target_branch: gh-pages
-          build_dir: ${{ env.PUBLISH_DIR }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # uses GitHub's checkout action to checkout code form the master branch
+    - uses: actions/checkout@v2
+    
+    - name: Setup .NET Core SDK
+      uses: actions/setup-dotnet@v1.8.1
+      with:
+        dotnet-version: '6.0'
+        include-prerelease: True
+
+    # publishes Blazor project to the release-folder
+    - name: Publish .NET Core Project
+      run: dotnet publish AvatarCharacterGeneratorRPG/AvatarCharacterGeneratorRPG.csproj -c Release -o release --nologo
+    
+  # changes the base-tag in index.html from '/' to 'AvatarCharacterGeneratorRPG' to match GitHub Pages repository subdirectory
+    - name: Change base-tag in index.html from / to AvatarCharacterGeneratorRPG
+      run: sed -i 's/<base href="\/" \/>/<base href="\/AvatarCharacterGeneratorRPG\/" \/>/g' release/wwwroot/index.html
+    
+    # copy index.html to 404.html to serve the same file when a file is not found
+    - name: copy index.html to 404.html
+      run: cp release/wwwroot/index.html release/wwwroot/404.html
+
+    # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+    - name: Add .nojekyll file
+      run: touch release/wwwroot/.nojekyll
+      
+    - name: Commit wwwroot to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@3.7.1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: release/wwwroot
